Application rework part 1

--- a/MyBookList/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/MyBookList/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBookList.Models.ExternalLoginConfirmationViewModel
+﻿@model MyHobbyList.Models.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
