--- a/MyBookList/Views/Account/ResetPassword.cshtml
+++ b/MyBookList/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBookList.Models.ResetPasswordViewModel
+﻿@model MyHobbyList.Models.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
