--- a/MyBookList/Views/Admin/TicketDetails.cshtml
+++ b/MyBookList/Views/Admin/TicketDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBookList.ViewModels.AdminPanelIndexView
+﻿@model MyHobbyList.ViewModels.AdminPanelIndexView
 @{
     ViewBag.Title = "TicketDetails";
     Layout = "~/Views/Shared/_Layout.cshtml";
