--- a/MyBookList/Views/Manage/AddPhoneNumber.cshtml
+++ b/MyBookList/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBookList.Models.AddPhoneNumberViewModel
+﻿@model MyHobbyList.Models.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
