--- a/MyBookList/Views/Manage/ChangePassword.cshtml
+++ b/MyBookList/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBookList.Models.ChangePasswordViewModel
+﻿@model MyHobbyList.Models.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
