--- a/MyBookList/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/MyBookList/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBookList.Models.VerifyPhoneNumberViewModel
+﻿@model MyHobbyList.Models.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
