--- a/MyBookList/Views/UserProfile/_SendTicket.cshtml
+++ b/MyBookList/Views/UserProfile/_SendTicket.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model MyBookList.ViewModels.User.UserTicketViewModel
+@model MyHobbyList.ViewModels.User.UserTicketViewModel
 
 @using (Html.BeginForm("SendTicket", "UserProfile"))
 {
