--- a/MyBookList/Views/Account/ForgotPassword.cshtml
+++ b/MyBookList/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBookList.Models.ForgotPasswordViewModel
+﻿@model MyHobbyList.Models.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
