--- a/MyBookList/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/MyBookList/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBookList.Models.ExternalLoginListViewModel
+﻿@model MyHobbyList.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
