--- a/MyBookList/Views/Manage/ManageLogins.cshtml
+++ b/MyBookList/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBookList.Models.ManageLoginsViewModel
+﻿@model MyHobbyList.Models.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
