--- a/MyBookList/Views/Manage/SetPassword.cshtml
+++ b/MyBookList/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBookList.Models.SetPasswordViewModel
+﻿@model MyHobbyList.Models.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
