--- a/MyBookList/Views/Shared/_BookFormModal.cshtml
+++ b/MyBookList/Views/Shared/_BookFormModal.cshtml
@@ -1,10 +1,9 @@
-﻿@model MyBookList.ViewModels.BookFormViewModel
+﻿@model MyHobbyList.ViewModels.BookFormViewModel
 
-<script src="~/Scripts/jquery-3.1.1.js"></script>
-
-@using (Html.BeginForm("Update", "Books", FormMethod.Post, new { @enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Update", "Book", FormMethod.Post, new { @enctype = "multipart/form-data" }))
 {
     @Html.ValidationSummary()
+    @Html.AntiForgeryToken()
     <div class="form-group">
         @Html.LabelFor(m => m.Title)
         @Html.TextBoxFor(m => m.Title, new { @class = "form-control" })
@@ -21,13 +20,13 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(m => m.BookGenreId)
-        @Html.DropDownListFor(m => m.BookGenreId, new SelectList(Model.BookGenres, "Id", "Name"), "Select Genre", new { @class = "form-control" })
+        @Html.LabelFor(m => m.GenreId)
+        @Html.DropDownListFor(x => x.GenreId, MyHobbyList.Controllers.EntityController.GetGenresStatic(MyHobbyList.Models.ElementType.Book), new { @class = "form-control" })
     </div>
     
     <div class="form-group">
         @Html.LabelFor(m => m.Description)
-        @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
+        @Html.TextAreaFor(m => m.Description, new { maxlength="799", @class = "form-control" })
     </div>
     
     <div class="form-group">
