--- a/MyBookList/Views/Shared/_GameFormModal.cshtml
+++ b/MyBookList/Views/Shared/_GameFormModal.cshtml
@@ -1,10 +1,9 @@
-﻿@model MyBookList.ViewModels.GameFormViewModel
-
+﻿@model MyHobbyList.ViewModels.GameFormViewModel
 <script src="~/Scripts/jquery-3.1.1.js"></script>
-
-@using (Html.BeginForm("Update", "Games", FormMethod.Post, new { @enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Update", "Game", FormMethod.Post, new { @enctype = "multipart/form-data" }))
 {
     @Html.ValidationSummary()
+    @Html.AntiForgeryToken()
     <div class="form-group">
         @Html.LabelFor(m => m.Title)
         @Html.TextBoxFor(m => m.Title, new { @class = "form-control" })
@@ -16,8 +15,8 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(m => m.GameGenreId)
-        @Html.DropDownListFor(m => m.GameGenreId, new SelectList(Model.GameGenres, "Id", "Name"), "Select Genre", new { @class = "form-control" })
+        @Html.LabelFor(m => m.GenreId)
+        @Html.DropDownListFor(m => m.GenreId, MyHobbyList.Controllers.EntityController.GetGenresStatic(MyHobbyList.Models.ElementType.Game), new { @class = "form-control" })
     </div>
 
     <div class="form-group">
@@ -27,7 +26,7 @@
 
     <div class="form-group">
         @Html.LabelFor(m => m.Description)
-        @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
+        @Html.TextAreaFor(m => m.Description, new { maxlength = "799", @class = "form-control" })
     </div>
 
     <div class="form-group">
