--- a/MyBookList/Views/Shared/_Layout.cshtml
+++ b/MyBookList/Views/Shared/_Layout.cshtml
@@ -16,15 +16,19 @@
             <p>&copy; Your Hobby List</p>
         </footer>
     </div>
-
     @Scripts.Render("~/bundles/lib")
-
     @Scripts.Render("~/bundles/jqueryval")
 
-
+    @if (TempData.ContainsKey("success"))
+    {
+        <script>toastr.success("@TempData.SingleOrDefault(x => x.Key == "success").Value")</script>
+    }
+    else if (TempData.ContainsKey("fail"))
+    {
+        <script>toastr.success("@TempData.SingleOrDefault(x => x.Key == "fail").Value")</script>
+    }
 
     @RenderSection("scripts", required: false)
-    
 
 </body>
 </html>
