--- a/MyBookList/Views/UserProfile/_SendTicket.cshtml
+++ b/MyBookList/Views/UserProfile/_SendTicket.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model MyHobbyList.ViewModels.User.UserTicketViewModel
+﻿@model MyHobbyList.Models.Ticket
 
 @using (Html.BeginForm("SendTicket", "UserProfile"))
 {
