--- a/MyBookList/Views/Book/Details.cshtml
+++ b/MyBookList/Views/Book/Details.cshtml
@@ -4,11 +4,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 
     var user = Request.IsAuthenticated;
+    var isUserActive = user && (MyHobbyList.Models.AccountState)ViewBag.IsBanned == MyHobbyList.Models.AccountState.Active ? true : false;
+    var isOwner = (bool)ViewBag.IsOwner;
+    var alreadyAdded = (bool)ViewBag.AlreadyAdded;
 
     var admin = this.User.IsInRole("Admin");
 }
 <link rel="stylesheet" type="text/css" href="~/Content/styles/DetailsPage.css" />
 <link rel="stylesheet" type="text/css" href="~/Content/styles/Modals.css" />
+
 <table id="table-main">
     <tbody>
         <tr>
@@ -54,29 +58,23 @@
     <tr>
         @if (user)
         {
-            <th>@Html.ActionLink("Add to my Base", "AddEntityToUserBase", "UserProfile", new { id = Model.Id, elementType = MyHobbyList.Models.ElementType.Book }, new { @class = "btn btn-primary" })</th>
-            <th id="button-unactive" class="btn btn-primary">Already Added</th>
-            <th><button id="btnShowModal" type="button" class="btn btn-primary">Edit Book</button></th>
-            <th>@Html.ActionLink("Delete this Book", "Delete", null, new { id = Model.Id }, new { @class = "btn btn-primary" })</th>
+            if (alreadyAdded)
+            {
+                <th id="button-unactive" class="btn btn-primary">Already Added</th>
+            }
+            else
+            {
+                <th>@Html.ActionLink("Add to my Base", "AddEntityToUserBase", "UserProfile", new { id = Model.Id, elementType = MyHobbyList.Models.ElementType.Book }, new { @class = "btn btn-primary" })</th>
+            }
+            if (isUserActive && isOwner)
+            {
+                <th><button id="btnShowModal" type="button" class="btn btn-primary">Edit Book</button></th>
+                <th>@Html.ActionLink("Delete this Book", "Delete", null, new { id = Model.Id }, new { @class = "btn btn-primary" })</th>
+            }
             <th><button id="RecBook" type="button" class="btn btn-primary">Recommend</button></th>
         }
     </tr>
 </table>
-<style>
-
-    #like {
-        background-color: transparent;
-        float: right;
-        margin-bottom: 10px;
-        border: none;
-        margin-top: 3px;
-    }
-
-    .like_it:hover {
-        border: 1px solid white;
-        border-radius: 15px;
-    }
-</style>
 
 @if (Model.Comments != null)
 {
@@ -123,7 +121,8 @@
         }
     </div>
 }
-@if (user)
+
+@if (isUserActive)
 {
     <div class="modal fade" id="AccountEditModal" tabindex="-1" role="dialog" aria-labelledby="AccountEditModalLabel">
         <div class="modal-dialog modalAccountEdit" role="document">
@@ -138,8 +137,10 @@
             </div>
         </div>
     </div>
+}
 
-
+@if (user)
+{
     <div class="modal fade" id="SendRecommend" tabindex="-1" role="dialog" aria-labelledby="AccountEditModalLabel">
         <div class="modal-dialog modalAccountEdit" role="document">
             <div class="modal-content">
