--- a/MyBookList/Views/UserProfile/Index.cshtml
+++ b/MyBookList/Views/UserProfile/Index.cshtml
@@ -1,94 +1,106 @@
 ﻿@model MyHobbyList.ViewModels.UserProfileViewModel
-
 @{
     ViewBag.Title = "title";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
-    var user = Request.IsAuthenticated;
+    var isUserActive = (MyHobbyList.Models.AccountState)ViewBag.IsBanned == MyHobbyList.Models.AccountState.Active ? true : false;
 }
-
 <link rel="stylesheet" type="text/css" href="~/Content/styles/Modals.css" />
-
-@if (Model.BooksList.Any())
-{
-    <h2 style="width:100%;text-align:center;">My Books</h2>
-    <table style="width: 100%" class="table table-bordered table-hover">
-        <thead>
-        <tr>
-            <th style="width:34%;text-align:center; font-size:18px;">Book Title</th>
-            <th style="width:33%;text-align:center; font-size:18px;">Your Rating</th>
-            <th style="text-align:center; font-size:18px;">Click To Delete</th>
-        </tr>
-        </thead>
-        <tbody>
-        @foreach (var book in Model.BooksList.ToList())
+<div style="display:flex">
+    <div style="display:grid">
+        @if (isUserActive)
         {
-            <tr>
-                <th style="text-align:center; font-size:14px;">@Html.ActionLink(book.Title, "Details", "Book", new { id = book.Id }, null)</th>
-                <th style="text-align:center; font-size:14px;">@book.AverageScore</th>
-                <th style="text-align:center;padding: 0">@Html.ActionLink("Delete From My List", "Delete", "UserProfile", new { id = book.Id, elementType = MyHobbyList.Models.ElementType.Book }, new { @class = "btn btn-primary" })</th>
-            </tr>
+            <button id="ShowBookModal" type="button" class="btn btn-primary"> Add new Book </button>
+            <button id="ShowMovieModal" type="button" class="btn btn-primary"> Add new Movie </button>
+            <button id="ShowGameModal" type="button" class="btn btn-primary"> Add new Game </button>
         }
-        </tbody>
-    </table>
-}
-
-
-@if (Model.MoviesList.Any())
-{
-    <h2 style="width:100%;text-align:center;">My Movies</h2>
-    <table style="width: 100%" class="table table-bordered table-hover">
-        <thead>
-            <tr>
-                <th style="width:34%;text-align:center; font-size:18px;">Movie Title</th>
-                <th style="width:33%;text-align:center; font-size:18px;">Your Rating</th>
-                <th style="text-align:center; font-size:18px;">Click To Delete</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var movie in Model.MoviesList.ToList())
+        <button id="SendTicket" type="button" class="btn btn-primary"> Send Ticket </button>
+    </div>
+    <div style="width:100%">
+        @if (Model.BooksList.Any())
+        {
+            <h2 style="width:100%;text-align:center;">My Books</h2>
+            <table style="width: 100%" class="table table-bordered table-hover">
+                <thead>
+                    <tr>
+                        <th style="width:34%;text-align:center; font-size:18px;">Book Title</th>
+                        <th style="width:33%;text-align:center; font-size:18px;">Your Rating</th>
+                        <th style="text-align:center; font-size:18px;">Click To Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var book in Model.BooksList.ToList())
+                    {
+                        <tr>
+                            <th style="text-align:center; font-size:14px;">@Html.ActionLink(book.Title, "Details", "Book", new { id = book.Id }, null)</th>
+                            <th style="text-align:center; font-size:14px;">@book.AverageScore</th>
+                            <th style="text-align:center;padding: 0">@Html.ActionLink("Delete From My List", "Delete", "UserProfile", new { id = book.Id, elementType = MyHobbyList.Models.ElementType.Book }, new { @class = "btn btn-primary" })</th>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
+        @if (Model.MoviesList.Any())
+        {
+            <h2 style="width:100%;text-align:center;">My Movies</h2>
+            <table style="width: 100%" class="table table-bordered table-hover">
+                <thead>
+                    <tr>
+                        <th style="width:34%;text-align:center; font-size:18px;">Movie Title</th>
+                        <th style="width:33%;text-align:center; font-size:18px;">Your Rating</th>
+                        <th style="text-align:center; font-size:18px;">Click To Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var movie in Model.MoviesList.ToList())
+                    {
+                        <tr>
+                            <th style="text-align:center; font-size:14px;">@Html.ActionLink(movie.Title, "Details", "Movie", new { id = movie.Id }, null)</th>
+                            <th style="text-align:center; font-size:14px;">@movie.AverageScore</th>
+                            <th style="text-align:center;padding: 0">@Html.ActionLink("Delete From My List", "Delete", "UserProfile", new { id = movie.Id, elementType = MyHobbyList.Models.ElementType.Movie }, new { @class = "btn btn-primary" })</th>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
+        @if (Model.GamesList.Any())
+        {
+            <h2 style="width:100%;text-align:center;">My Games</h2>
+            <table style="width: 100%" class="table table-bordered table-hover">
+                <thead>
+                    <tr>
+                        <th style="width:34%;text-align:center; font-size:18px;">Game Title</th>
+                        <th style="width:33%;text-align:center; font-size:18px;">Your Rating</th>
+                        <th style="text-align:center; font-size:18px;">Click To Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var game in Model.GamesList.ToList())
+                    {
+                        <tr>
+                            <th style="text-align:center; font-size:14px;">@Html.ActionLink(game.Title, "Details", "Game", new { id = game.Id }, null)</th>
+                            <th style="text-align:center; font-size:14px;">@game.AverageScore</th>
+                            <th style="text-align:center;padding: 0">@Html.ActionLink("Delete From My List", "Delete", "UserProfile", new { id = game.Id, elementType = MyHobbyList.Models.ElementType.Movie }, new { @class = "btn btn-primary" })</th>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        }
+    </div>
+    @if (Model.RecommendedEntities.Count() > 0)
+    {
+        <div>
+            @foreach(var item in Model.RecommendedEntities)
             {
-                <tr>
-                    <th style="text-align:center; font-size:14px;">@Html.ActionLink(movie.Title, "Details", "Movie", new { id = movie.Id }, null)</th>
-                    <th style="text-align:center; font-size:14px;">@movie.AverageScore</th>
-                    <th style="text-align:center;padding: 0">@Html.ActionLink("Delete From My List", "Delete", "UserProfile", new { id = movie.Id, elementType = MyHobbyList.Models.ElementType.Movie }, new { @class = "btn btn-primary" })</th>
-                </tr>
+                <p><img id="image" src='@Url.Action("ShowFull", "Image", new { id = item.ImageId})' height="150" width="105" /></p>
+            <p>@Html.ActionLink(@item.Title, "Details", System.Enum.GetName(typeof(MyHobbyList.Models.ElementType), item.ElementType).ToString(), new { id = item.Id }, null)</p>
+            <p>Recommended by: @item.RecommenderEmail</p>
+            <p>@item.Message</p>
+            <p>@Html.ActionLink("Add", "LikeRecommendation", new { id = item.Id }) @Html.ActionLink("Add", "RemoveRecommendation", new { id = item.Id })</p>
             }
-        </tbody>
-    </table>
-}
-
-@if (Model.GamesList.Any())
-{
-    <h2 style="width:100%;text-align:center;">My Games</h2>
-    <table style="width: 100%" class="table table-bordered table-hover">
-        <thead>
-            <tr>
-                <th style="width:34%;text-align:center; font-size:18px;">Game Title</th>
-                <th style="width:33%;text-align:center; font-size:18px;">Your Rating</th>
-                <th style="text-align:center; font-size:18px;">Click To Delete</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var game in Model.GamesList.ToList())
-            {
-                <tr>
-                    <th style="text-align:center; font-size:14px;">@Html.ActionLink(game.Title, "Details", "Game", new { id = game.Id }, null)</th>
-                    <th style="text-align:center; font-size:14px;">@game.AverageScore</th>
-                    <th style="text-align:center;padding: 0">@Html.ActionLink("Delete From My List", "Delete", "UserProfile", new { id = game.Id, elementType = MyHobbyList.Models.ElementType.Movie }, new { @class = "btn btn-primary" })</th>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
-
-<p>
-    <button id="ShowBookModal" type="button" class="btn btn-primary"> Add new Book </button>
-    <button id="ShowMovieModal" type="button" class="btn btn-primary"> Add new Movie </button>
-    <button id="ShowGameModal" type="button" class="btn btn-primary"> Add new Game </button>
-    <button id="SendTicket" type="button" class="btn btn-primary"> Send Ticket </button>
-</p>
-
+        </div>
+    }
+</div>
 <div class="modal fade" id="Ticket" tabindex="-1" role="dialog" aria-labelledby="AccountEditModalLabel">
     <div class="modal-dialog modalAccountEdit" role="document">
         <div class="modal-content">
@@ -96,67 +108,65 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h3><strong>Please enter title and describe your problem<span class="accountname"></span></strong></h3>
             </div>
-
             <div class="modal-body">
                 <div id="formContant">
-                    @Html.Partial("_SendTicket", new MyHobbyList.ViewModels.User.UserTicketViewModel())
+                    @Html.Partial("_SendTicket", new MyHobbyList.Models.Ticket())
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<div class="modal fade" id="BookEdit" tabindex="-1" role="dialog" aria-labelledby="AccountEditModalLabel">
-    <div class="modal-dialog modalAccountEdit" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h3><strong>Enter new book values<span class="accountname"></span></strong></h3>
-            </div>
-
-            <div class="modal-body">
-                <div id="formContant">
-                    @Html.Partial("_BookFormModal", new MyHobbyList.ViewModels.BookFormViewModel())
+@if (isUserActive)
+{
+    <div class="modal fade" id="BookEdit" tabindex="-1" role="dialog" aria-labelledby="AccountEditModalLabel">
+        <div class="modal-dialog modalAccountEdit" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h3><strong>Enter new book values<span class="accountname"></span></strong></h3>
+                </div>
+                <div class="modal-body">
+                    <div id="formContant">
+                        @Html.Partial("_BookFormModal", new MyHobbyList.ViewModels.BookFormViewModel())
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="modal fade" id="MovieEdit" tabindex="-1" role="dialog" aria-labelledby="AccountEditModalLabel">
-<div class="modal-dialog modalAccountEdit" role="document">
-    <div class="modal-content">
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h3><strong>Enter new movie values<span class="accountname"></span></strong></h3>
-        </div>
-
-        <div class="modal-body">
-            <div id="formContant">
-                @Html.Partial("_MovieFormModal", new MyHobbyList.ViewModels.MovieFormViewModel())
+    <div class="modal fade" id="MovieEdit" tabindex="-1" role="dialog" aria-labelledby="AccountEditModalLabel">
+        <div class="modal-dialog modalAccountEdit" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h3><strong>Enter new movie values<span class="accountname"></span></strong></h3>
+                </div>
+                <div class="modal-body">
+                    <div id="formContant">
+                        @Html.Partial("_MovieFormModal", new MyHobbyList.ViewModels.MovieFormViewModel())
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
-</div>
 
-<div class="modal fade" id="GameEdit" tabindex="-1" role="dialog" aria-labelledby="AccountEditModalLabel">
-<div class="modal-dialog modalAccountEdit" role="document">
-    <div class="modal-content">
-        <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h3><strong>Enter new game values<span class="accountname"></span></strong></h3>
-        </div>
-
-        <div class="modal-body">
-            <div id="formContant">
-                @Html.Partial("_GameFormModal", new MyHobbyList.ViewModels.GameFormViewModel())
+    <div class="modal fade" id="GameEdit" tabindex="-1" role="dialog" aria-labelledby="AccountEditModalLabel">
+        <div class="modal-dialog modalAccountEdit" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h3><strong>Enter new game values<span class="accountname"></span></strong></h3>
+                </div>
+                <div class="modal-body">
+                    <div id="formContant">
+                        @Html.Partial("_GameFormModal", new MyHobbyList.ViewModels.GameFormViewModel())
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-</div>
-</div>
-
+}
 @section Scripts {
     <script>
         $(document).ready(function () {
@@ -172,7 +182,7 @@
             $('#GameEdit').on('shown.bs.modal', function () {
                 $('#myInput').focus()
             })
-        
+
             $('#Ticket').on('shown.bs.modal', function () {
                 $('#myInput').focus()
             })
@@ -192,7 +202,7 @@
             $("#ShowGameModal").click(function () {
                 $("#GameEdit").modal('show');
             });
-            
+
             $("#BookEdit #MovieEdit #GameEdit #Ticket").on("submit", "#form-bookformmodal", function (e) {
                 e.preventDefault();
 
@@ -207,8 +217,8 @@
                 });
             });
         });
-        
-        function readURL(input,targetId) {
+
+        function readURL(input, targetId) {
 
             if (input.files && input.files[0]) {
                 var reader = new FileReader();
@@ -224,11 +234,9 @@
 
         $("#imgInp1,#imgInp2,#imgInp3").change(function (e) {
             var id = $(e.target).parent().attr("id");
-            readURL(this,id);
+            readURL(this, id);
         });
 
     </script>
 }
-
-
 
